# PM25

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
gumtree/: Dockerfile
output/: pattern_sample.json
src/: create_pattern.py  exception.py
src/abstractor/: abstraction.py  loder.py  regex.py
src/cleaner/: extractor.py  spliter.py
src/constants/: path.py
src/database/: __init__.py  crud.py  database.py  models.py
src/developer/: author_preprocessor.py  dev_commit_matcher.py  dev_counter.py  dev_matcher.py  dev_simple_matcher.py  main.py  matcher.py  preprocessor.py
src/diff/: comment_remover.py  commit_diff.py  file_diff.py
src/fetch/: fetch_commit_diff.py  fetch_repo_and_commit.py  git.py  open_stack.py  pull_request.py
src/gumtree/: abstraction.py  extractor.py  runGumTree.py  runner.py  runner_in_docker.py
src/models/: diff.py  gerrit.py  gumtree.py  pattern.py
src/pattern/: confidence.py  convert_code_into_pattern.py  converter.py  diff2sequence.py  diff2sequence_generator.py  filter.py  main.py  merge.py  parallel_diff.py  pattern_counter.py  pattern_filter.py  pattern_matcher.py  prefix_span.py  source_preprocessor.py  support_filter.py
src/pattern/analysis/: desc_sorter.py  length_count.py  pattern_counter.py
src/pattern/code2diff/: converter.py  source_preprocessor.py
src/pattern/creater/: prefix_span.py
src/predict/: collector.py  formatter.py  predictor.py
src/rq1/: counter.py  cut.py  filter.py  rank.py  search.py  term.py  time.py
src/rq2/: search.py  time.py
src/utils/: ast_checker.py  diff_handler.py  discord.py  file_name_processor.py  file_processor.py  lang_identifiyer.py
test/: conftest.py  test_pattern.py
test/developer/: conftest.py  test_matcher.py  test_preprocessor.py
test/pattern/: conftest.py  test_convert_pattern.py  test_preprocessing.py
test/predict/: conftest.py  test_collector.py
