[tool.poetry]
name = "pm25"
version = "0.1.0"
description = ""
authors = ["tomoya-n <s266227@wakayama-u.ac.jp>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
nltk = "^3.8.1"
numpy = "^1.26.4"
tokenizers = "^0.15.2"
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
tqdm = "^4.66.4"
sklearn-model = "^0.0.6"
python-dotenv = "^1.0.1"
polars = "^1.4.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
gitpython = "^3.1.43"
codetokenizer = {path = "/Users/tomoya-n/dev/PM25/dist/codetokenizer-0.1.0.tar.gz"}
requests = "^2.32.3"
astor = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.pytest.ini_options]
testpaths = "test"